added Fancy and Simple page

--- a/root/index.html
+++ b/root/index.html
@@ -1,5 +1,9 @@
 <HTML>
+<HEAD>
+<TITLE>Simple</TITLE>
+</HEAD>
 <BODY>
 <p>This is a simple page.</p>
+<p><a href="fancy.html">This is a fancy page</a></p>
 </BODY>
 </HTML>
