--- a/root/fancy.html
+++ b/root/fancy.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="purp.css"/>
 </HEAD>
 <BODY>
-<p>This is a fancy page.</p>
+<p>This is a <i>fancy</i> page.</p>
 <a href="index.html">This is a simple page</a>
 </BODY>
 </HTML>
