--- a/root/fancy.html
+++ b/root/fancy.html
@@ -6,6 +6,6 @@
 <BODY>
 <p>This is a <i>fancy</i> page.</p>
 <a href="index.html">This is a simple page</a>
-<img src="pug.jpg" alt="cool dog">
+<img src="pug.jpeg" alt="cool dog">
 </BODY>
 </HTML>
